# video-webpage

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: app.py
src/static/: style.css
src/templates/: index.html
