[tool.poetry]
name = "video-webpage"
version = "0.1.0"
description = ""
authors = ["Stuart Russell <stuart.russell@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.0"
waitress = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
